--- a/index.html
+++ b/index.html
@@ -1,23 +1,21 @@
-
-
-
 <!DOCTYPE html>
 <html lang="es">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Citas Motivacionales</title>
+  <title>Mini Blog comentarios</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="container">
-    <h1>💡 Generador de Citas Motivacionales</h1> <!-- Aqui se inicia las citas -->
+  <header>
+    <h1>Mini Blog de comentarios</h1> 
     <p id="quote">Haz clic en el botón para inspirarte ✨</p>
     <button onclick="generarCita()">Nueva Cita</button>
   </div>
   <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
