--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <head>
     <body>
       <header><h1>Hollow knight</h1></header>
-      <Section><articule><h2>Personajes:</h2><p>descripción</p></articule><aside><img scr=</aside></Section>  
+      <Section><articule><h2>Personajes:</h2><p>descripción</p></articule><aside><img scr="images(40)(1).jpeg"/></aside></Section>  
       <nav>
       <ul>
       <li>The Hollow Knight</li> 
@@ -27,6 +27,7 @@
   
  </body>
   </head>
+
 
 
 
