--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <head>
     <body>
       <header><h1>Hollow knight</h1></header>
-      <Section><articule><h2>Personajes:</h2><p>¿Como se llaman?</p></articule><aside><img scr="[![images-40-1.jpg](https://i.postimg.cc/x8dBsst0/images-40-1.jpg)](https://postimg.cc/ygwfxyM5)"/></aside></Section>  
+      <Section><articule><h2>Personajes:</h2><p>¿Como se llaman?</p></articule><aside><img scr="<img src="https://i.imgur.com/ejemplo.jpg" alt="Hollow Knight" width="400">"/></aside></Section>  
       <nav>
       <ul>
       <li>The Hollow Knight</li> 
@@ -27,6 +27,7 @@
   
  </body>
   </head>
+
 
 
 
